force-app/main/default/objects/Account/fields/Business_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Address__c</fullName>
    <label>Business Address</label>
    <length>120</length>
    <type>Text</type>
</CustomField>