force-app/main/default/objects/Account/fields/Business_City__c.field-meta.xml
<CustomField>
    <fullName>Business_City__c</fullName>
    <label>Business City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>