force-app/main/default/objects/Account/fields/Business_County__c.field-meta.xml
<CustomField>
    <fullName>Business_County__c</fullName>
    <label>Business County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>San Bernardino</fullName>
            </value>
            <value>
                <fullName>Riverside</fullName>
            </value>
            <value>
                <fullName>Imperial</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Ventura</fullName>
            </value>
            <value>
                <fullName>Santa Barbara</fullName>
            </value>
            <value>
                <fullName>Out of Area</fullName>
                <label>Out Of Area</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>