force-app/main/default/objects/Account/fields/Business_State__c.field-meta.xml
<CustomField>
    <fullName>Business_State__c</fullName>
    <label>Business State</label>
    <length>18</length>
    <type>Text</type>
</CustomField>