force-app/main/default/objects/Account/fields/Business_Zip__c.field-meta.xml
<CustomField>
    <fullName>Business_Zip__c</fullName>
    <label>Business Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>