force-app/main/default/objects/Account/fields/Census_Tract_Code__c.field-meta.xml
<CustomField>
    <fullName>Census_Tract_Code__c</fullName>
    <formula>State_Code__c &amp; County_Code__c &amp; Tract_Code__c</formula>
    <label>Census Tract Code</label>
    <type>Text</type>
</CustomField>