force-app/main/default/objects/Account/fields/County_Code__c.field-meta.xml
<CustomField>
    <fullName>County_Code__c</fullName>
    <label>County Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>