force-app/main/default/objects/Account/fields/Latitude_Y__c.field-meta.xml
<CustomField>
    <fullName>Latitude_Y__c</fullName>
    <formula>TEXT(BillingLatitude)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitude (Y)</label>
    <type>Text</type>
</CustomField>