force-app/main/default/objects/Account/fields/Longitude_X__c.field-meta.xml
<CustomField>
    <fullName>Longitude_X__c</fullName>
    <formula>TEXT(BillingLongitude)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude (X)</label>
    <type>Text</type>
</CustomField>