force-app/main/default/objects/Account/fields/Tract_Code__c.field-meta.xml
<CustomField>
    <fullName>Tract_Code__c</fullName>
    <label>Tract Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>